# notellm_mcp_server

./: .gitignore  README.md  main.py  mcp_config.example.json  mcp_server.py  openai_config_example.py  pyproject.toml
docs/: README_CN.md
example_tools/: tool_math.py
